--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -214,11 +214,11 @@
                   <div id="limitBttnBox">
                     <button id="limitBttn" type="button" class="limit-market-order-type flex-center pr-2 py-0 hoverbg selected">[[[Limit Order]]]</button>
                   </div>
-                  <button id="sellBttn" type="button" class="switch-buy-sell px-4 sellred-bg">
-                    [[[sell_switch]]]
-                  </button>
-                  <button id="buyBttn" type="button" class="switch-buy-sell px-4 buygreen-bg d-hide">
+                  <button id="buyBttn" type="button" class="switch-buy-sell buygreen-bg selected">
                     [[[buy_switch]]]
+                  </button>
+                  <button id="sellBttn" type="button" class="switch-buy-sell sellred-bg">
+                    [[[sell_switch]]]
                   </button>
                   <div id="marketBttnBox">
                     <button id="marketBttn" type="button" class="limit-market-order-type flex-center pl-2 py-0 hoverbg">[[[Market Order]]]</button>
