--- a/client/webserver/site/src/css/market_dark.scss
+++ b/client/webserver/site/src/css/market_dark.scss
@@ -105,22 +105,31 @@ body.dark {
         &.switch-buy-sell {
           color: #a1a1a1;
 
-          &:hover {
+          &:hover,
+          &.selected {
             color: #eee;
+
+            &.buygreen-bg {
+              background-color: #29bb7799;
+            }
+
+            &.sellred-bg {
+              background-color: #e95e5e99;
+            }
           }
-        }
-
-        &.buygreen-bg {
-          background-color: #29bb7799;
-        }
-
-        &.sellred-bg {
-          background-color: #e95e5e99;
         }
 
         &.submit {
           &:hover {
             color: #eee;
+          }
+
+          &.buygreen-bg {
+            background-color: #29bb7799;
+          }
+
+          &.sellred-bg {
+            background-color: #e95e5e99;
           }
         }
       }
