--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -77,6 +77,7 @@ div[data-handler=markets] {
       }
 
       #limitBttnBox {
+        width: 15%;
         padding-right: 1px;
         border-right: 1px solid $light_border_color;
 
@@ -85,7 +86,18 @@ div[data-handler=markets] {
         }
       }
 
+      #buyBttn {
+        margin-left: 10px;
+        margin-right: 4px;
+      }
+
+      #sellBttn {
+        margin-left: 4px;
+        margin-right: 10px;
+      }
+
       #marketBttnBox {
+        width: 15%;
         padding-left: 1px;
         border-left: 1px solid $light_border_color;
 
@@ -115,7 +127,8 @@ div[data-handler=markets] {
 
         &.switch-buy-sell {
           opacity: 0.6;
-          padding: 0 40px;
+          width: 35%;
+          padding: 0 8px;
           border-radius: 3px;
 
           &:hover,
