--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -212,7 +212,7 @@
                 {{- /* ORDER TYPE BUTTONS */ -}}
                 <div id="orderTypeBttns" class="mt-2 fs14 d-flex justify-content-between">
                   <div id="limitBttnBox">
-                    <button id="limitBttn" type="button" class="limit-market-order-type flex-center pr-2 py-0 hoverbg selected">[[[Limit Order]]]</button>
+                    <button id="limitBttn" type="button" class="limit-market-order-type pr-2 py-0 hoverbg selected">[[[Limit Order]]]</button>
                   </div>
                   <button id="buyBttn" type="button" class="switch-buy-sell buygreen-bg selected">
                     [[[buy_switch]]]
@@ -221,7 +221,7 @@
                     [[[sell_switch]]]
                   </button>
                   <div id="marketBttnBox">
-                    <button id="marketBttn" type="button" class="limit-market-order-type flex-center pl-2 py-0 hoverbg">[[[Market Order]]]</button>
+                    <button id="marketBttn" type="button" class="limit-market-order-type pl-2 py-0 hoverbg">[[[Market Order]]]</button>
                   </div>
                 </div>
                 {{- /* ORDER FORM - CONTENTS */ -}}
