--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -328,7 +328,7 @@
               <div id="notRegistered" class="d-hide">
                 <div class="p-3 flex-center fs16 grey">[[[create_account_to_trade]]]</div>
                 <div class="brdrtop brdrbottom flex-center p-2">
-                  <p class="text-center fs14 sans-light p-2 m-0">[[[need_to_register_msg]]]</p>
+                  <p class="text-center fs14 p-2 m-0">[[[need_to_register_msg]]]</p>
                   <button data-tmpl="registerBttn" type="button" class="pointer hoverbg text-center p-2 text-nowrap">[[[Create Account]]]</button>
                 </div>
               </div>
