ui: order-form responsive validation
To implement responsive order-form validation HTML layout and JS event handlers need to be rewritten. Since there is quite a bit of JS-code  relying on the way event handlers were written, those code-bits also needed updates/rewrites to fit in with the new event-handlers, hopefully, these changes overall make order-form handling code more explicit / thorougly documented, and less tightly coupled.

Additionally, some bugs were discovered (when testing this functionality) and fixed here.

List of most notable changes:
- validation for `Price`, `Quantity` fields should be more responsive, so that the user has a better sense of why his inputs don't make sense (this is mostly accomplished by highlighting background/border for relevant order-form element; and maybe hiding some elements like `Total` when its not possible to calculate based on current user-inputs)
- `Place order to buy ...` button press should fail right away when `Total` exceeds `Max Buy`, instead of allowing user to proceed - only to fail later on
- `Place order to ...` animates now; that 1) allows for more snappy user-feedback and more importantly 2) prevents user from clicking on it right after he's entered invalid `Rate` / `Quantity` inputs (otherwise user might not notice the rounding or will learn about his mistake in delayed manner)
- fixed a bug where the `orderTotalPreview` for market orders was not being set correctly
- added `min` and `step` attributes for various number inputs on order-form, resulting in better messaging and enabling the use of arrow keys on number inputs, and fixing a bug with Up-key not working with `Quantity` input
- fixed a bug with applying the result of `Max Buy/Sell` calculation in callback; by the time this callback displays the result, the user might have switched from Buy to Sell side, or vice versa (resulting in order-form showing him `Max Buy/Sell` for the opposite order side, not the one he switched to)
- having all 4 order type

--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -56,10 +56,6 @@ div[data-handler=markets] {
         font-size: 14px;
       }
 
-      input:focus {
-        outline: none;
-      }
-
       span.unitbox {
         position: absolute;
         font-size: 14px;
@@ -100,7 +96,8 @@ div[data-handler=markets] {
         color: #1e7d11;
       }
 
-      #orderPreview,
+      #orderTotalPreview,
+      #mktSellTotalPreview,
       .h21 {
         height: 21px;
       }
