enable order warning acknowledgement

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -611,9 +611,15 @@
           <span class="ico-info red fs12" id="vPreorderErrTip" data-tooltip=" "></span>
         </div>
 
-        <hr class="dashed my-2">
-        <div class="disclaimer fs14">
+        <hr class="dashed mt-2 mb-0">
+        <div id="disclaimer" class="disclaimer fs14 mt-2">
           [[[order_disclaimer]]]
+        </div>
+        <div id="disclaimerAck" class="grey text-start pointer hoverbg py-1 fs14 lh1">
+          <span class="ico-check fs12"></span> [[[acknowledge_and_hide]]]
+        </div>
+        <div id="showDisclaimer" class="d-flex align-items-center grey text-start pointer hoverbg fs14 lh1 py-1 d-hide">
+          <span class="fs8 ico-plus me-1 mt-1"></span> [[[show_disclaimer]]]
         </div>
       </form>
 
