--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -507,3 +507,20 @@ span.token-aware-symbol sup {
     }
   }
 }
+
+.form-check-input[type=checkbox] {
+  background-color: #ebebeb;
+  cursor: pointer;
+
+  &:checked {
+    background-color: #3095db;
+  }
+}
+
+.form-check-label {
+  cursor: pointer;
+
+  &:hover {
+    font-weight: bold;
+  }
+}
