--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -563,12 +563,19 @@
             <span class="grey fs14 underline pointer hoverbg" id="vFeeDetails">[[[details]]]</span>
           </div>
 
-          <div class="py-1 d-flex align-items-center justify-content-center fs18" id="vFeeSummary">
-            <span id="vFeeSummaryLow"></span>
-            <span class="fs15">%</span>
-            <span class="fs15 px-2">[[[to]]]</span>
-            <span id="vFeeSummaryHigh"></span>
-            <span class="fs15">%</span>
+          <div class="py-1 flex-column align-items-center justify-content-center fs18" id="vFeeSummary">
+            <div class="d-flex flex-row align-items-center justify-content-center">
+              <img class="micro-icon mx-1" data-icon="from">
+              <span id="summarySwapFeesLow"></span>
+              -
+              <span id="summarySwapFeesHigh"></span>
+            </div>
+            <div class="d-flex flex-row align-items-center justify-content-center">
+              <img class="micro-icon mx-1" data-icon="to">
+              <span id="summaryRedeemFeesLow"></span>
+              -
+              <span id="summaryRedeemFeesHigh"></span>
+            </div>
           </div>
 
           <hr class="dashed mb-2 mt-3">
@@ -646,8 +653,8 @@
                   <td><img class="micro-icon" data-icon="to"> [[[Redeem]]]</td>
                 </tr>
                 <tr>
-                  <td><span id="vSwapFeesLow"></span> (<span id="vSwapFeesLowPct"></span>)</td>
-                  <td><span  id="vRedeemFeesLow"></span> (<span  id="vRedeemFeesLowPct"></span>)</td>
+                  <td><span id="vSwapFeesLow"></span> <span id="vSwapFeesLowPct"></span></td>
+                  <td><span  id="vRedeemFeesLow"></span> <span  id="vRedeemFeesLowPct"></span></td>
                 </tr>
               </table>
             </div>
@@ -665,8 +672,8 @@
                   <td><img class="micro-icon" data-icon="to"> [[[Redeem]]]</td>
                 </tr>
                 <tr>
-                  <td><span id="vSwapFeesHigh"></span> (<span id="vSwapFeesHighPct"></span>)</td>
-                  <td><span  id="vRedeemFeesHigh"></span> (<span  id="vRedeemFeesHighPct"></span>)</td>
+                  <td><span id="vSwapFeesHigh"></span> <span id="vSwapFeesHighPct"></span></td>
+                  <td><span  id="vRedeemFeesHigh"></span> <span  id="vRedeemFeesHighPct"></span></td>
                 </tr>
               </table>
             </div>
@@ -679,7 +686,7 @@
             </div>
             <div>
               <img class="micro-icon me-1" data-icon="from">
-              <span id="vSwapFeesMax"></span>  (<span id="vSwapFeesMaxPct"></span>)
+              <span id="vSwapFeesMax"></span>  <span id="vSwapFeesMaxPct"></span>
             </div>
           </div>
 
