normalize input borders

--- a/client/webserver/site/src/css/application.scss
+++ b/client/webserver/site/src/css/application.scss
@@ -10,6 +10,8 @@ $light_body_bg: white;
 $dark_body_bg: #091a28;
 $light_border_color: #ddd;
 $dark_border_color: #383f4b;
+$light_input_border: #999;
+$dark_input_border: #555;
 $sans: "source-sans", sans-serif;
 $demi-sans: "demi-sans", sans-serif;
 $mono: "mono", monospace;
