Update dash and fix formatting

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -567,13 +567,13 @@
             <div class="d-flex flex-row align-items-center justify-content-center">
               <img class="micro-icon mx-1" data-icon="from">
               <span id="summarySwapFeesLow"></span>
-              -
+              <span class="px-1">&ndash;</span>
               <span id="summarySwapFeesHigh"></span>
             </div>
             <div class="d-flex flex-row align-items-center justify-content-center">
               <img class="micro-icon mx-1" data-icon="to">
               <span id="summaryRedeemFeesLow"></span>
-              -
+              <span class="px-1">&ndash;</span>
               <span id="summaryRedeemFeesHigh"></span>
             </div>
           </div>
@@ -654,7 +654,7 @@
                 </tr>
                 <tr>
                   <td><span id="vSwapFeesLow"></span> <span id="vSwapFeesLowPct"></span></td>
-                  <td><span  id="vRedeemFeesLow"></span> <span  id="vRedeemFeesLowPct"></span></td>
+                  <td><span id="vRedeemFeesLow"></span> <span id="vRedeemFeesLowPct"></span></td>
                 </tr>
               </table>
             </div>
@@ -673,7 +673,7 @@
                 </tr>
                 <tr>
                   <td><span id="vSwapFeesHigh"></span> <span id="vSwapFeesHighPct"></span></td>
-                  <td><span  id="vRedeemFeesHigh"></span> <span  id="vRedeemFeesHighPct"></span></td>
+                  <td><span id="vRedeemFeesHigh"></span> <span id="vRedeemFeesHighPct"></span></td>
                 </tr>
               </table>
             </div>
