--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -104,7 +104,7 @@
 {{end}}
 
 {{define "bottom"}}
-<script src="/js/entry.js?v=N2HhoiFV"></script>
+<script src="/js/entry.js?v=Om9tNpJl"></script>
 </body>
 </html>
 {{end}}
