--- a/client/webserver/site/src/html/settings.tmpl
+++ b/client/webserver/site/src/html/settings.tmpl
@@ -11,7 +11,7 @@
       </label>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="showPokes"{{if .UserInfo.ShowPopups}} checked{{end}}>
+      <input class="form-check-input" type="checkbox" value="" id="showPokes" checked>
       <label class="form-check-label" for="showPokes">
         [[[Show pop-up notifications]]]
       </label>
