app: Fee summary touch-ups
The fee summary panel now shows the fees as a percentage
of the order for token assets, if the fiat rate is available
for both the token and the parent. Also, if the percentage
is less than 0.05%, "< 0.1" is displayed.

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -563,6 +563,14 @@
             <span class="grey fs14 underline pointer hoverbg" id="vFeeDetails">[[[details]]]</span>
           </div>
 
+          <div class="py-1 d-flex align-items-center justify-content-center fs18" id="vFeeSummaryPct">
+            <span id="vFeeSummaryLow"></span>
+            <span class="fs15">%</span>
+            <span class="fs15 px-2">[[[to]]]</span>
+            <span id="vFeeSummaryHigh"></span>
+            <span class="fs15">%</span>
+          </div>
+
           <div class="py-1 flex-column align-items-center justify-content-center fs18" id="vFeeSummary">
             <div class="d-flex flex-row align-items-center justify-content-center">
               <img class="micro-icon mx-1" data-icon="from">
