ui: wallet sync progress improvements (register page)

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -104,7 +104,7 @@
 {{end}}
 
 {{define "bottom"}}
-<script src="/js/entry.js?v=1yeumsqty"></script>
+<script src="/js/entry.js?v=N2HhoiFV"></script>
 </body>
 </html>
 {{end}}
