--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -508,7 +508,8 @@
     <span class="fs16 grey">%</span>
   </div>
   <div class="mt-1 flex-center flex-row fs14 d-hide" data-tmpl="syncRemainBox">
-    <span data-tmpl="syncRemain" class="me-1"></span> [[[remaining]]]
+    <span data-tmpl="syncRemaining"><span data-tmpl="syncRemain" class="me-1"></span> [[[remaining]]]</span>
+    <span data-tmpl="syncFinishingUp" class="me-1"></span>
   </div>
 </div>
 
