--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -141,16 +141,26 @@
 <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
 <div data-tmpl="addDexHdr" class="flex-center fs24 sans-light"><span class="ico-plus fs12 me-2"></span> [[[Add a DEX]]]</div>
 <div data-tmpl="updateDexHdr" class="flex-center fs24 sans-light d-hide"></span> [[[update dex host]]]</div>
-<div class="fs20 sans-light" data-tmpl="pickServerMsg">[[[Pick a server]]]</div>
+<div class="fs20 sans-light" data-tmpl="pickServerMsg">
+  <hr class="dashed my-2">
+  [[[Pick a server]]]
+</div>
 <div class="d-flex flex-column align-items-stretch mt-1" data-tmpl="knownXCs">
   {{range .KnownExchanges}}
     <div class="known-exchange" data-host="{{.}}"><img class="micro-icon me-1" src={{dummyExchangeLogo .}}> {{.}}</div>
   {{end}}
 </div>
-<div class="px-1 mt-3 fs14 pointer d-flex justify-content-start align-items-center {{if eq (len .KnownExchanges) 0}}d-hide{{end}}"
-  data-tmpl="showCustom">
-  <span class="ico-plus fs11"></span>
-  <div class="ps-2">[[[add a different server]]]</div>
+<div class="fs14" data-tmpl="skipRegistrationBox">
+  <hr class="dashed my-2">
+  <input class="form-check-input" type="checkbox" data-tmpl="skipRegistration" id="skipRegistration">
+  <label for="skipRegistration" class="ps-1">[[[Skip Registration]]]</label>
+</div>
+<div data-tmpl="showCustom">
+  <hr class="dashed my-2">
+  <div class="px-1 mt-3 fs14 pointer d-flex justify-content-start align-items-center {{if eq (len .KnownExchanges) 0}}d-hide{{end}}">
+    <span class="ico-plus fs11"></span>
+    <div class="ps-2">[[[add a different server]]]</div>
+  </div>
 </div>
 
 <div data-tmpl="customBox">
@@ -181,6 +191,19 @@
   <div class="col-12 d-flex justify-content-end align-items-end p-0">
     <button data-tmpl="submit" type="button" class="justify-content-center fs16 bg2 selected">[[[Submit]]]</button>
   </div>
+</div>
+<div class="fs15 pt-3 text-center d-hide errcolor text-break" data-tmpl="err"></div>
+{{end}}
+
+{{define "discoverAcctForm"}}
+<div class="py-1 text-center fs28 sans-light offwhite lh1" data-tmpl="header">[[[Create Account]]]</div>
+<div class="fs16 text-center mb-4">on <span data-tmpl="dexHost"></span></div>
+<div data-tmpl="appPWBox" class="pb-2">
+  <label for="discoverAcctAppPW" class="form-label ps-1 mb-1">[[[App Password]]]</label>
+  <input type="password" class="form-control select" id="discoverAcctAppPW" data-tmpl="appPW">
+</div>
+<div class="d-flex justify-content-center mt-2">
+  <button data-tmpl="submit" type="button" class="fs15 bg2 selected">[[[Create Account]]]</button>
 </div>
 <div class="fs15 pt-3 text-center d-hide errcolor text-break" data-tmpl="err"></div>
 {{end}}
