--- a/client/webserver/site/src/html/register.tmpl
+++ b/client/webserver/site/src/html/register.tmpl
@@ -43,8 +43,13 @@
     </form>
 
     {{- /* DEX ADDRESS FORM */ -}}
-    <form class="d-hide{{if and .UserInfo.Initialized .UserInfo.Authed}} selected{{end}}" id="dexAddrForm">
+    <form class="d-hide{{if and .UserInfo.Initialized .UserInfo.Authed (not .Host)}} selected{{end}}" id="dexAddrForm">
       {{template "dexAddrForm" .}}
+    </form>
+
+    {{- /* DISCOVER ACCOUNT FORM */ -}}
+    <form class="d-hide{{if and .UserInfo.Initialized .UserInfo.Authed .Host}} selected{{end}}" id="discoverAcctForm" data-host="{{.Host}}">
+      {{template "discoverAcctForm" .}}
     </form>
 
     {{- /* REG ASSET SELECTOR */ -}}
