add UI to update bond options

--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -320,7 +320,8 @@ button.form-button {
 #dexAddrForm,
 #verifyForm,
 #appPWForm,
-#deleteArchivedRecordsForm {
+#deleteArchivedRecordsForm,
+#updateBondOptionsForm {
   width: 325px;
 }
 
