--- a/client/webserver/site/src/html/dexsettings.tmpl
+++ b/client/webserver/site/src/html/dexsettings.tmpl
@@ -11,11 +11,14 @@
   </div>
   <div class="fs15 pt-3 text-center d-hide errcolor text-break" id="errMsg"></div>
   <div class="settings">
-    <div {{if .Exchange.ViewOnly}} class="d-hide"{{end}}>
+    <div{{if .Exchange.ViewOnly}} class="d-hide"{{end}}>
       <button id="exportDexBtn" class="bg2 selected">[[[Export Account]]]</button>
     </div>
     <div>
       <button id="disableAcctBtn" class="bg2 selected">[[[Disable Account]]]</button>
+    </div>
+    <div{{if .Exchange.ViewOnly}} class="d-hide"{{end}}>
+      <button id="updateBondOptionsBtn" class="bg2 selected">[[[update_bond_options]]]</button>
     </div>
     <div>
       <input type="file" class="form-control select d-none" id="certFileInput">
@@ -42,6 +45,30 @@
     <form class="d-hide" id="dexAddrForm" autocomplete="off">
       {{template "dexAddrForm" .}}
     </form>
+
+    {{- /* UPDATE BOND OPTIONS */ -}}
+    <form class="d-hide" id="updateBondOptionsForm" autocomplete="off">
+      <div class="py-1 text-center fs28 sans-light">[[[update_bond_options]]]</div>
+      <div class="selectBondAsset mt-3">
+       <label for="bondAssetSelect" class="form-label">[[[Asset]]]</label>
+       <select id="bondAssetSelect" class="w-100"></select>
+      </div>
+
+      <div class="mt-3">
+        <label for="bondTargetTier" class="form-label">
+          [[[target_tier]]]
+          <span class="ico-info fs12" data-tooltip="[[[target_tier_tooltip]]]"></span>
+        </label>
+        <input type="number" min="0" class="form-control select bg1" id="bondTargetTier" autocomplete="off">
+      </div>
+
+      <div class="d-flex justify-content-end mt-3">
+        <button id="updateBondOptionsConfirm" class="submit bg2 fs18 selected">[[[Submit]]]</button>
+      </div>
+      <div id="bondOptionsErr" class="fs15 pt-3 text-center d-hide errcolor text-break"></div>
+      <div id="bondOptionsMsg" class="fs15 pt-3 text-center d-hide text-break">[[[bond_options_update_success]]]</div>
+    </form>
+
   </div>
 
 </div>
