--- a/client/webserver/site/src/localized_html/pl-PL/bodybuilder.tmpl
+++ b/client/webserver/site/src/localized_html/pl-PL/bodybuilder.tmpl
@@ -85,7 +85,7 @@
 {{end}}
 
 {{define "bottom"}}
-<script src="/js/entry.js?v=rY3Lq8"></script>
+<script src="/js/entry.js?v=VRIaXpc"></script>
 </body>
 </html>
 {{end}}
