site: wipe orders on OrderRetired topic order note

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -104,7 +104,7 @@
 {{end}}
 
 {{define "bottom"}}
-<script src="/js/entry.js?v=qAsSUzx7"></script>
+<script src="/js/entry.js?v=NhPu0J3"></script>
 </body>
 </html>
 {{end}}
