app: Fix price displays
The price displays at the top of the market page and in between the
order books were not being updated. This fixes them.

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -126,7 +126,8 @@
               <span class="flex-grow-1">Order Book</span>
               <span class="flex-center">
                 <span id="obUp" class="ico-arrowup buycolor fs11"></span>
-                <span id="obPrice" class="buycolor ms-1">0.001568</span>
+                <span id="obDown" class="ico-arrowdown sellcolor fs11 d-hide"></span>
+                <span id="obPrice" class="buycolor ms-1"></span>
               </span>
             </div>
 
