ui: hide bond strength form until it has utility

--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -290,10 +290,10 @@
   [[[reg_confirm_submit]]]
 </div>
 
-<div class="d-flex my-3">
+<div class="d-hide d-flex my-3" id="bondStrengthInput">
   <label for="bondStrengthField" class="form-label col-6 d-flex align-items-center p-0">[[[bond_strength]]]</label>
   <div class="col-18 p-0 position-relative">
-    <input type="number" min="1" value="1" class="form-control select bg1" id="bondStrengthField" data-tmpl="bondStrengthField">
+    <input type="number" min="1" value="1" step="1" class="form-control select bg1" id="bondStrengthField" data-tmpl="bondStrengthField">
   </div>
 </div>
 
