ui: eth wallet setup hints
Link to the wiki page, and show two provider text boxes from the start.

--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -337,6 +337,11 @@ button.form-button {
   width: 425px;
 }
 
+a[data-tmpl=walletCfgGuide] {
+  color: inherit;
+  text-decoration: none;
+}
+
 #deposit {
   #copyAlert {
     margin-left: 12px;
