--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -359,6 +359,7 @@
       <div class="py-1 mt-2" id="reconfigInputs">
         {{template "walletConfigTemplates"}}
       </div>
+      {{template "walletCfgGuideTemplate"}}
       <div id="showChangePW" class="mt-2 pointer d-flex align-items-center justify-content-start">
         <span id="showIcon" class="ico-plus fs8 ps-1"></span>
         <span id="hideIcon" class="ico-minus fs8 ps-1"></span>
