ui: display your orders rate in header

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -390,6 +390,8 @@
                     <span data-tmpl="side"></span>
                     <span data-tmpl="qty" class="ms-1"></span>
                     <span data-tmpl="baseSymbol" class="ms-1 grey"></span>
+                    <span class="ms-1">@</span>
+                    <span data-tmpl="rate" class="ms-1"></span>
                     <span class="flex-grow-1 d-flex align-items-center justify-content-end">
                       <span data-tmpl="status"></span>
                       <span data-tmpl="activeLight" class="active-indicator active"></span>
