use outstanding colors for candle duration buttons to improve visibility
Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -417,7 +417,8 @@ div[data-handler=markets] {
 
       &:hover,
       &.selected {
-        border-color: #6cac78;
+        border-color: #dd7900;
+        color: #dd7900;
       }
     }
   }
