notify users when connecting wallets fail using form modal
Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -535,6 +535,13 @@
       </div>
     </form>
 
+    {{- /* Error Modal */ -}}
+    <form id="errorModal" class="d-hide mw-425">
+      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="fs22 text-center">[[[Error]]]</div>
+      <div id="errorModalMsg" class="fs16 errcolor my-2 text-center"></div>
+    </form>
+
   </div>
 </div>
 {{template "bottom"}}
