--- a/client/webserver/site/src/css/market_dark.scss
+++ b/client/webserver/site/src/css/market_dark.scss
@@ -80,7 +80,7 @@ body.dark {
           }
 
           &.sell {
-            background-color: $buycolor_dark;
+            background-color: $sellcolor_dark;
           }
         }
 
