--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -386,7 +386,7 @@
               <div id="userOrders" class="mb-3">
                 <div id="userOrderTmpl" class="user-order">
                   <div data-tmpl="header" class="user-order-header">
-                    <div data-tmpl="sideLight" class="side-indicator buy"></div>
+                    <div data-tmpl="sideLight" class="side-indicator"></div>
                     <span data-tmpl="side"></span>
                     <span data-tmpl="qty" class="ms-1"></span>
                     <span data-tmpl="baseSymbol" class="ms-1 grey"></span>
