site: maintain order active light for settling orders

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -104,7 +104,7 @@
 {{end}}
 
 {{define "bottom"}}
-<script src="/js/entry.js?v=d1040bb"></script>
+<script src="/js/entry.js?v=rgcDpVd"></script>
 </body>
 </html>
 {{end}}
