client: Remove Bot from Core
In preparation for moving the bot logic outside of core, all of
the previous bot logic is deleted. The UI is also removed as it
will no longer function without major modification.

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -89,7 +89,7 @@
       [[[Order History]]]
     </a>
     {{if .Experimental}}
-    <a href="/mm" class="demi hoverbright plainlink d-flex align-items-center py-1 authed-only">
+    <a href="/markets" class="demi hoverbright plainlink d-flex align-items-center py-1 authed-only">
       <span class="ico-barchart fs16 me-2"></span>
       [[[Market Making]]]
     </a>
