site: update deps for yaml fix

--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -17,10 +17,7 @@ button {
 
 body {
   position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  inset: 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -199,10 +196,7 @@ input:focus:not([type=checkbox]) {
 
 @mixin fill-abs {
   position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
+  inset: 0;
 }
 
 .fill-abs {
