--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -238,10 +238,7 @@ button.form-button {
   @extend .flex-center;
 
   position: fixed;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
+  inset: 0;
   padding: 25px 0;
   background-color: $light_body_bg;
   z-index: 100;
