--- a/client/webserver/site/src/css/wallets.scss
+++ b/client/webserver/site/src/css/wallets.scss
@@ -45,6 +45,7 @@
     .icon-select {
       padding: 15px;
       cursor: pointer;
+      min-height: fit-content;
 
       & > img {
         width: 40px;
