--- a/client/webserver/site/src/html/orders.tmpl
+++ b/client/webserver/site/src/html/orders.tmpl
@@ -35,12 +35,12 @@
         {{end}}
         <div class="apply-bttn d-hide"><button class="bg2 demi">[[[apply]]]</button></div>
       </div>
-      <div id="exportOrders" class="export-archived-records-bttn mt-3">
+      <div id="exportOrders" class="export-archived-records-bttn mt-3 pb-2">
         <button class="bg2 demi">[[[Export Trades]]]</button>
       </div>
       <hr class="dashed mt-2 mb-2">
       <div class="demi fs16 text-center py-1 px-4">[[[other_actions]]]</div>
-      <div id="deleteArchivedRecords" class="export-archived-records-bttn">
+      <div id="deleteArchivedRecords" class="export-archived-records-bttn mt-2">
         <button class="bg2 demi">[[[delete_archived_records]]]</button>
       </div>
     </div>
