client/{core, webserver, eth}: Manual token approvals
This makes token approvals a separate step for users instead of an
automatic part of the first token swap. This allows users to be aware
of what is happening and not be suprised by the high cost of their
swap.

If the base asset is an unnapproved token, then the user will not be able
to to a Sell. The Sell button in the market page will be disabled, and there
will be a button which allows the user to do the approve transaction.
If the quote asset is an unnapproved token, then the Buy button will be
disabled. If both assets are unnaproved tokens, the order panel will not
be displayed.

--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -485,6 +485,10 @@ div[data-handler=markets] {
     }
   }
 
+  #approveTokenForm {
+    width: 500px;
+  }
+
   #verifyForm {
     .echo-data span {
       margin: 0 5px;
