--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -747,12 +747,12 @@
           [[[:title:Approve]]] <span id="approveTokenSymbol"></span>
         </div>
         <div id="tokenApprovalSubmissionElements">
-          <div id="approveTokenMainDiv" class="text-center fs17 sans-light position-relative">
+          <div id="approveTokenMainDiv" class="fs15 text-start mt-2">
             [[[approve_token_text]]]
           </div>
           <hr class="dashed my-2">
           <div class="d-flex justify-content-between align-items-stretch flex-wrap">
-            <div id="tokenApprovalPWBox" class="hide-pw col-11 p-0">
+            <div id="tokenApprovalPWBox" class="col-11 p-0">
               <label for="tokenApprovalPW" class="form-label pt-3 ps-1 mb-1">[[[App Password]]]</label>
               <input type="password" class="form-control select" id="tokenApprovalPW" data-tmpl="appPass" autocomplete="off">
             </div>
