--- a/client/webserver/site/src/css/wallets_dark.scss
+++ b/client/webserver/site/src/css/wallets_dark.scss
@@ -9,7 +9,8 @@ body.dark {
       border-bottom: $dark_border_color;
     }
 
-    .peers-table {
+    #peersTable,
+    #tokenVersionTable {
       @extend .table-dark;
     }
 
