Add unapproved err, fix intl, add onConfirm to core.ApproveToken

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -202,11 +202,11 @@
                 <span class="p-3 flex-center fs16 grey d-hide" id="approvalRequiredBoth">[[[approval_required_both]]]</span>
                 <button id="approveBaseBttn" type="button" class="pointer hoverbg text-center p-2 text-nowrap">[[[Approve]]] <span id="baseTokenAsset"></span></button>
                 <div id="approvalPendingBase" class="d-hide flex-center position-relative py-2">
-                  <span class="px-1" id="approvalPendingBaseSymbol"></span> Approval Pending <div class="px-2 ico-spinner spinner fs15"></div>
+                  <span class="px-1" id="approvalPendingBaseSymbol"></span> [[[approval_change_pending]]] <div class="px-2 ico-spinner spinner fs15"></div>
                 </div>
                 <button id="approveQuoteBttn" type="button" class="pointer hoverbg text-center p-2 text-nowrap">[[[Approve]]] <span id="quoteTokenAsset"></span></button>
                 <div id="approvalPendingQuote" class="d-hide flex-center position-relative py-2">
-                  <span class="px-1" id="approvalPendingQuoteSymbol"></span> Approval Pending <div class="px-2 ico-spinner spinner fs15"></div>
+                  <span class="px-1" id="approvalPendingQuoteSymbol"></span> [[[approval_change_pending]]] <div class="px-2 ico-spinner spinner fs15"></div>
                 </div>
               </div>
 
