--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -10,7 +10,7 @@
 
 {{define "markets"}}
 {{template "top" .}}
-<div id="main" data-handler="markets" class="main m-0 flex-nowrap v1">
+<div id="main" data-handler="markets" data-net="{{.Net}}" class="main m-0 flex-nowrap v1">
   {{- /* MARKET LIST */ -}}
   <div id="leftMarketDock" class="flex-column align-items-end v1 default">
     <div class="h-100 d-flex flex-column align-items-stretch">
@@ -194,6 +194,21 @@
           {{- /* ORDER FORM */ -}}
           <div class="order-panel pb-3 position-relative">
             <div class="d-flex flex-column align-items-stretch">
+
+              {{- /* TOKEN APPROVAL */ -}}
+              <div class="fs15 pt-1 pb-3 text-center brdrbottom d-hide" id="tokenApproval">
+                <span class="p-3 flex-center fs16 grey d-hide" id="approvalRequiredBuy">[[[approval_required_buy]]]</span>
+                <span class="p-3 flex-center fs16 grey d-hide" id="approvalRequiredSell">[[[approval_required_sell]]]</span>
+                <span class="p-3 flex-center fs16 grey d-hide" id="approvalRequiredBoth">[[[approval_required_both]]]</span>
+                <button id="approveBaseBttn" type="button" class="pointer hoverbg text-center p-2 text-nowrap">[[[Approve]]] <span id="baseTokenAsset"></span></button>
+                <div id="approvalPendingBase" class="d-hide flex-center position-relative py-2">
+                  <span class="px-1" id="approvalPendingBaseSymbol"></span> [[[approval_change_pending]]] <div class="px-2 ico-spinner spinner fs15"></div>
+                </div>
+                <button id="approveQuoteBttn" type="button" class="pointer hoverbg text-center p-2 text-nowrap">[[[Approve]]] <span id="quoteTokenAsset"></span></button>
+                <div id="approvalPendingQuote" class="d-hide flex-center position-relative py-2">
+                  <span class="px-1" id="approvalPendingQuoteSymbol"></span> [[[approval_change_pending]]] <div class="px-2 ico-spinner spinner fs15"></div>
+                </div>
+              </div>
 
               {{- /* ORDER TYPE BUTTONS */ -}}
               <div id="orderTypeBttns" class="fs14 d-flex justify-content-start align-items-stretch d-hide">
@@ -724,6 +739,32 @@
           </div>
 
         </div>
+      </form>
+
+      <form id="approveTokenForm" class="position-relative flex-center flex-column fs20 d-hide">
+        <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+        <div class="px-2 py-1 text-center fs22 text-nowrap sans-light position-relative">
+          [[[:title:Approve]]] <span id="approveTokenSymbol"></span>
+        </div>
+        <div id="tokenApprovalSubmissionElements">
+          <div id="approveTokenMainDiv" class="fs15 text-start mt-2">
+            [[[approve_token_text]]]
+          </div>
+          <hr class="dashed my-2">
+          <div class="d-flex justify-content-between align-items-stretch flex-wrap">
+            <div id="tokenApprovalPWBox" class="col-11 p-0">
+              <label for="tokenApprovalPW" class="form-label pt-3 ps-1 mb-1">[[[App Password]]]</label>
+              <input type="password" class="form-control select" id="tokenApprovalPW" data-tmpl="appPass" autocomplete="off">
+            </div>
+            <span class="col-3 hide-pw"></span> {{/* flex dummy */}}
+            <div class="d-grid align-items-end col-10 p-0">
+              <button id="approveTokenButton" type="button" class="fs15 bg2 selected">[[[Approve]]]</button>
+            </div>
+          </div>
+        </div>
+        <span id="tokenApprovalTxMsg" class="text-center fs17 sans-light d-hide">[[[token_approval_tx_msg]]]</span>
+        <a target="_blank" class="subtlelink" id="tokenApprovalTxID"></a>
+        <div class="fs15 pt-3 text-center d-hide errcolor text-break" id="approveTokenErr"></div>
       </form>
 
       {{- /* CANCEL ORDER FORM */ -}}
