add cache buster utilities and test

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -9,7 +9,7 @@
   <link rel="icon" href="/img/favicon.png?v=AK4XS4">
   <meta name="description" content="Decred DEX Client Web Portal">
   <title>{{.Title}}</title>
-  <link href="/css/style.css?v=nTZAqUp" rel="stylesheet">
+  <link href="/css/style.css?v=ee28b73d5c825592eabf6803a7328165" rel="stylesheet">
 </head>
 <body {{if .UserInfo.DarkMode}} class="dark"{{end}}>
   <div class="popup-notes" id="popupNotes">
@@ -104,7 +104,7 @@
 {{end}}
 
 {{define "bottom"}}
-<script src="/js/entry.js?v=nTZAqUp"></script>
+<script src="/js/entry.js?v=8a7ad9638d80d739602c93c6deb46549"></script>
 </body>
 </html>
 {{end}}
